--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,4 +1,20 @@
+.main-nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 4em; }
 
+.main-menu, .main-menu ul {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.main-menu__item {
+  list-style: none; }
+
+.main-menu__link {
+  text-decoration: none; }
+  
 .home {
   min-height: 100vh;
   display: flex;
@@ -6,12 +22,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-image: linear-gradient(
-    to bottom,
-  hsl(0, 10, 20) 50%,
-  hsl(0, 0, 90) 50%,
-  hsl(0, 0, 90) 100%
-  );
+ 
 
   &__img {
     width: 10%;
@@ -19,43 +30,19 @@
     margin-top: 1.5rem;
   }
 
-  &__username {
-    color: white;
-    font-weight: bold;
-    font-size: 3em;
-  }
-
-  &__amount {
-    background-color: white;
-    font-size: 2.1rem;
-    font-weight: bold;
-    padding: 2.5rem 5rem 1.5rem;
-    border-radius: 11px;
-    margin: 1rem 0 5rem 0;
-    box-shadow: 0 10px 5px 5px rgba(0, 0, 0, 0.02);
-
-
-    &--info {
-      font-size: 1.1rem;
-      margin: 0;
-    }
-  }
+  
 
   &__buttons {
     margin-top: 3em;
     width: 100%;
 
-    & > button {
-      outline: 0;
-      background: #fff;
-      color: #fe718f;
-      font-size: 1.5rem;
-      padding: 1rem;
-      margin: 1rem;
-      border: 0;
-      box-shadow: none;
-      font-weight: bold;
-      cursor: pointer;
+    &-letter{
+      background-image: linear-gradient(
+        to bottom,
+      hsl(0, 10, 20) 50%,
+      hsl(0, 0, 90) 50%,
+      hsl(0, 0, 90) 100%
+      );
     }
   }
 }
