listo sin graidnte

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,47 +2,73 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 4em; }
+  background-color: purple;
+  width:100%;
+  font-size:1.2em;
+}
 
 .main-menu, .main-menu ul {
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;   
+  text-align: center;
+}
 
 .main-menu__item {
   list-style: none; }
 
-.main-menu__link {
-  text-decoration: none; }
-  
+.main-menu__link:hover,.main-menu__link:active, .main-menu__link {
+  text-decoration: none;
+  color:white;
+  text-decoration: none; 
+ }
+
 .home {
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows:(1fr, 1fr);
   justify-content: center;
   align-items: center;
   text-align: center;
  
 
   &__img {
-    width: 10%;
-    border-radius: 50%;
     margin-top: 1.5rem;
+    border:1px solid black;
+    width:200px;
+    height: 300px;
+    display:block;
+    left: 50%;
+    position: relative;
+    &-close{
+      position: absolute;
+      width:20px;
+      top:18%;
+      left: 60%
+    }
   }
 
   
 
   &__buttons {
-    margin-top: 3em;
+    margin-top:2em;
     width: 100%;
+    display:grid;
+    grid-gap: 0.5em;
+    grid-template-rows:1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 
-    &-letter{
-      background-image: linear-gradient(
-        to bottom,
-      hsl(0, 10, 20) 50%,
-      hsl(0, 0, 90) 50%,
-      hsl(0, 0, 90) 100%
-      );
+    & span{
+      background-color: purple;
+      color:white;
+      display:inline;
+      display: flex;
+      justify-content: center;
+      align-items: center;   
+      text-align: center;
+      width:200px;
+      height: 100px;
+      font-size:3em;
     }
   }
 }
